# cvd

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: cvd-AutoDeployTrigger-11d050d1-8cdd-4034-9e68-0455ca815d9e.yml  cvd-AutoDeployTrigger-34cbaebc-50da-4e53-987a-7bf8655d7dd2.yml  cvd-AutoDeployTrigger-b263dee4-1863-4dca-8853-0833a5e48808.yml
src/: aggregator.rs  binance.rs  coinbase.rs  main.rs  main.rs.bak  models.rs  types.rs
static/: index.html
