[package]
name = "binance_cvd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.21"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"

axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }